# JNIforEx6GUI

./: CMakeLists.txt  sample_DefaultReversiGameLogic.cpp  sample_DefaultReversiGameLogic.h
include/: Board.h  Cell.h  DefaultLogic.h  GameLogic.h
src/: Board.cpp  Cell.cpp  DefaultLogic.cpp  GameLogic.cpp
